Create Book page and server side validations. Add Client-side Validations for create book page.

--- a/BookListRazor/Pages/BookList/Create.cshtml
+++ b/BookListRazor/Pages/BookList/Create.cshtml
@@ -45,3 +45,8 @@
         </div>
     </form>
 </div>
+
+@*Client-Side Validations*@
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
